--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,3 +38,8 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Lint
+      uses: Jerome1337/golint-action@v1.0.2
+      with:
+        golint-path: './...'
