--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,3 +43,8 @@ jobs:
       uses: Jerome1337/golint-action@v1.0.2
       with:
         golint-path: './...'
+
+    - uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage
+        fail_ci_if_error: true
